--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/express-fileupload": "^1.2.0",
     "@types/express-session": "^1.17.4",
     "@types/mysql": "^2.15.19",
     "@types/node": "^16.11.13",
@@ -22,6 +23,7 @@
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
     "express-session": "^1.17.2",
     "helmet": "^4.6.0",
     "knex": "^0.95.14",
