--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@types/express": "^4.17.13",
     "@types/express-fileupload": "^1.2.0",
     "@types/express-session": "^1.17.4",
+    "@types/fluent-ffmpeg": "^2.1.20",
+    "@types/into-stream": "^3.1.1",
     "@types/mysql": "^2.15.19",
     "@types/node": "^16.11.13",
+    "@types/tmp": "^0.2.3",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.4"
   },
@@ -25,8 +28,14 @@
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
     "express-session": "^1.17.2",
+    "fluent-ffmpeg": "^2.1.2",
     "helmet": "^4.6.0",
+    "into-stream": "^7.0.0",
     "knex": "^0.95.14",
-    "mysql": "^2.18.1"
+    "mp4box": "^0.4.9",
+    "mysql": "^2.18.1",
+    "simple-hls": "0.0.1",
+    "tmp": "^0.2.1",
+    "transloadit": "^3.0.2"
   }
 }
