--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
+    "@elastic/elasticsearch": "^7.16.0",
     "@google-cloud/storage": "^5.16.1",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
@@ -33,9 +34,11 @@
     "express-session": "^1.17.2",
     "fluent-ffmpeg": "^2.1.2",
     "helmet": "^4.6.0",
+    "image-type": "^4.1.0",
     "into-stream": "^7.0.0",
     "knex": "^0.95.14",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "mp4box": "^0.4.9",
     "mysql": "^2.18.1",
     "passport": "^0.5.2",
