--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node-dev ./src/index.ts"
+    "dev": "nodemon -L src/index.ts"
   },
   "author": "",
   "license": "ISC",
@@ -21,6 +21,7 @@
     "@types/passport": "^1.0.7",
     "@types/passport-local": "^1.0.34",
     "@types/tmp": "^0.2.3",
+    "nodemon": "^2.0.15",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.4"
   },
@@ -29,6 +30,7 @@
     "@google-cloud/storage": "^5.16.1",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
+    "dotenv": "^11.0.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
     "express-session": "^1.17.2",
