--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon -L src/index.ts"
+    "dev": "nodemon -L src/index.ts",
+    "start": "ts-node ./src/index.ts && pm2 start src/index.js  -i max --name video_platform --log ~/.pm2/logs/video_platform/ --time true --no-daemon true --merge-logs"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@tsconfig/recommended": "^1.0.1",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/express-fileupload": "^1.2.0",
     "@types/express-session": "^1.17.4",
+    "@types/express-socket.io-session": "^1.3.6",
     "@types/fluent-ffmpeg": "^2.1.20",
     "@types/into-stream": "^3.1.1",
     "@types/lodash": "^4.14.178",
@@ -20,6 +23,7 @@
     "@types/node": "^16.11.13",
     "@types/passport": "^1.0.7",
     "@types/passport-local": "^1.0.34",
+    "@types/session-file-store": "^1.2.2",
     "@types/tmp": "^0.2.3",
     "nodemon": "^2.0.15",
     "ts-node-dev": "^1.1.8",
@@ -34,6 +38,7 @@
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
     "express-session": "^1.17.2",
+    "express-socket.io-session": "^1.3.5",
     "fluent-ffmpeg": "^2.1.2",
     "helmet": "^4.6.0",
     "image-type": "^4.1.0",
@@ -45,6 +50,7 @@
     "mysql": "^2.18.1",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
+    "session-file-store": "^1.5.0",
     "simple-hls": "0.0.1",
     "socket.io": "^4.4.0",
     "tmp": "^0.2.1",
