--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon -L src/index.ts",
-    "start": "ts-node ./src/index.ts && pm2 start src/index.js  -i max --name video_platform --log ~/.pm2/logs/video_platform/ --time true --no-daemon true --merge-logs"
+    "start": "npm run build && pm2 start ./dist/index.js --name video_platform  --no-daemon",
+    "build": "tsc"
   },
   "author": "",
   "license": "ISC",
